Fix server response error handling for bad api start session; lighten blue background color for start session jumbotron container; add spacing for start session form submit button

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -14,7 +14,11 @@ footer {
 }
 
 .jumbotron_red {
-  background-color:#99DDFF
+  background-color: #d8e6ff
+}
+
+.button_form_spacing {
+  margin-left: 10px;
 }
 
 /*
